--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -1,76 +1,91 @@
 @import "../../../styles/constants.scss";
 
-.profile_Container{
+.profile_Container {
     background: rgb(231, 230, 230);
     padding-bottom: 10rem;
-    h1{
+    text-align: end;
+
+    h1 {
         font-size: 1.375rem;
         text-align: center;
         padding: 1.875rem 0;
     }
-    small{
+
+    small {
         text-align: end;
         display: block;
         padding-bottom: 1rem;
     }
-    small::after{
+
+    small::after {
         content: " *";
         color: #F00;
         font-size: 18px;
     }
-    .inputCover{
+
+    .inputCover {
         border: 1px solid #d9d9d9;
-        input{
+
+        input {
             border-radius: 2px;
             padding: 14px 10px;
             margin-bottom: 1em;
         }
     }
 }
-.right_section{
+
+.right_section {
     padding-top: 8rem;
+
     @media screen and (max-width: 768px) {
         padding-top: 4rem;
     }
-    h3{
+
+    h3 {
         font-size: 1.0625rem;
         font-weight: 700;
         border-bottom: 1px solid #666;
         padding-bottom: 1rem;
         text-align: center;
     }
-    i{
+
+    i {
         background-image: url("../../../public/Images/reg-spirite.png");
         background-repeat: no-repeat;
         display: block;
         margin: auto;
 
     }
-    span{
+
+    span {
         display: block;
         width: 90%;
         text-align: center;
         margin: auto;
     }
-    .icon1{
+
+    .icon1 {
         background-position: 1px 1px;
         width: 39px;
         height: 44px;
         margin: 1rem auto;
     }
-    .icon2{
+
+    .icon2 {
         background-position: 1px -48px;
         width: 47px;
         height: 44px;
         margin: 1rem auto;
     }
-    .icon3{
+
+    .icon3 {
         background-position: 1px -94px;
         width: 47px;
         height: 44px;
         margin: 1rem auto;
     }
-    .icon4{
+
+    .icon4 {
         background-position: 1px -140px;
         width: 47px;
         height: 44px;
@@ -79,37 +94,46 @@
 }
 
 @media only screen and (max-width: 950px) {
-    .register_header_Links, .register_header_Links a {
-      width: 100%;
+
+    .register_header_Links,
+    .register_header_Links a {
+        width: 100%;
     }
-  }
+}
 
 
 /////////////////////////////////////////inputboxes SCSS////////////////////////////////////////////////////////////////////////////////
 
-.formEdit{
-    .singleBox{
-        // display: flex;
-        div{
-            width: 100%;
-            svg{
+.formEdit {
+    text-align: start;
+    .singleBox {
+
+        display: flex;
+        justify-content: end;
+        div {
+            width: 70%;
+            text-align: center;
+            svg {
                 position: absolute;
                 right: 15px;
                 top: 40%;
             }
         }
-        .inputBox{
+
+        .inputBox {
             border: 1px solid #d9d9d9;
             border-radius: 2px;
             padding: 0.875rem 5.5rem;
             text-align: center;
             margin: 0.6em;
+            margin-right: 0%;
             color: $browser_text;
             cursor: pointer;
             position: relative;
-            min-width: 275px;   
+            min-width: 275px;
             background-color: $milkWhite_bg;
-            .inputBoxVal{
+
+            .inputBoxVal {
                 visibility: hidden;
                 border: 1px solid #d9d9d9;
                 border-radius: 2px;
@@ -125,18 +149,20 @@
                 background: $milkWhite_bg;
                 box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
                 z-index: 9;
-                ul{
+
+                ul {
                     list-style: none;
                     margin: 0;
                     padding: 0 5px;
                     width: 100%;
                     max-height: 300px;
                     overflow-x: hidden;
-                    overflow-y: scroll;   
+                    overflow-y: scroll;
                     cursor: text;
                     display: grid;
                     grid-template-columns: auto auto auto;
-                    li{
+
+                    li {
                         position: relative;
                         margin: 3px 5px 3px 0;
                         padding: 10px 20px 10px 5px;
@@ -146,23 +172,27 @@
                         background-color: #f5f5f5;
                         line-height: 13px;
                         cursor: default;
-                        &:hover{
+
+                        &:hover {
                             background-color: #d9475c;
                             color: #fff
                         }
-                    }  
-                    .tabActive{
+                    }
+
+                    .tabActive {
                         background-color: #d9475c;
                         color: #fff
                     }
                 }
             }
         }
-        .blankInput{
+
+        .blankInput {
             border: none !important;
             background: transparent !important;
             list-style: none;
-            input{
+
+            input {
                 // margin: 1px 0;
                 padding: 0;
                 height: 25px;
@@ -178,26 +208,28 @@
             }
         }
     }
-    .input_max{
+
+    .input_max {
         width: -webkit-fill-available;
     }
-    label{
-        position: absolute;
+
+    label {
         margin: 1rem 0 0 -9rem;
-        width: 130px;
-        text-align: end;
+        text-align: start;
     }
-    input{
+
+    input {
         border: 1px solid #d9d9d9;
         border-radius: 2px;
         padding: 0.875rem 2.5rem;
         text-align: center;
         margin: 0.6em;
-        &:focus{
+
+        &:focus {
             outline: none;
         }
     }
-  }
+}
 
 
 
@@ -210,6 +242,172 @@
 
 
 
-  .active{
+.active {
     visibility: visible !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 990px) and (min-width: 768px) {
+
+    .profile_Container {
+        padding: 0 2rem;
+        padding-bottom: 5rem;
+        text-align: center;
+
+
+        .formEdit {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+            .singleBox {
+                display: flex;
+                flex-direction: column;
+                gap: 0.3rem;
+
+                label {
+                    position: initial;
+                    margin: 0%;
+                    text-align: start;
+                }
+
+                .inputBox {
+                    margin: 0%;
+                    padding: 0%;
+                    text-align: start;
+                    width: -webkit-fill-available;
+                    input {
+                        text-align: start;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media only screen and (max-width: 540px) and (min-width: 423px) {
+    .profile_Container {
+        padding: 0 2rem;
+        padding-bottom: 5rem;
+        text-align: center;
+
+
+        .formEdit {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+            .singleBox {
+                display: flex;
+                flex-direction: column;
+                gap: 0.3rem;
+
+                label {
+                    position: initial;
+                    margin: 0%;
+                    text-align: start;
+                }
+
+                .inputBox {
+                    margin: 0%;
+                    padding: 0%;
+                    text-align: start;
+                    width: -webkit-fill-available;
+
+                    input {
+                        text-align: start;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+@media only screen and (max-width: 415px) {
+    .register_header_Links {
+        padding: 38px 0;
+        width: 100%;
+    }
+
+    .profile_Container {
+        padding: 0 2rem;
+        padding-bottom: 5rem;
+        text-align: center;
+
+        .formEdit {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+
+            .singleBox {
+                display: flex;
+                flex-direction: column;
+
+                label {
+                    position: initial;
+                    margin: 0%;
+                    text-align: start;
+                }
+
+                .inputBox {
+                    margin: 0.6rem 0;
+                    padding: 0%;
+                    width: -webkit-fill-available;
+
+                    .blankInput {
+                        text-align: start;
+
+                        input {
+                            text-align: start;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+@media only screen and (max-width: 300px) {
+    .profile_Container {
+        text-align: center;
+
+        div {
+            padding: 0;
+
+            .formEdit {
+
+                .singleBox {
+
+                    .inputBox {
+                        margin: 0.6rem 0;
+                        padding: 0%;
+                        min-width: 0;
+                    }
+                }
+            }
+        }
+    }
 }
