--- a/pages/Register/RegisterHeader/RegisterHeader.module.scss
+++ b/pages/Register/RegisterHeader/RegisterHeader.module.scss
@@ -1,13 +1,16 @@
 @import "../../../styles/constants.scss";
+
 .Navbar_Wrapper {
   background: $transparent_maroon;
   padding: 0;
   height: 63px;
   width: 76%;
   box-shadow: 0 2px 6px 0 rgb(0 0 0 / 20%);
+
   .navBar_logo {
     width: 163px;
     background-color: $milkWhite_bg;
+
     img {
       max-width: 100%;
       height: 63px;
@@ -26,28 +29,33 @@
     position: relative;
     overflow: hidden;
   }
+
   :hover,
   :focus,
   :active {
     color: $white_txt !important;
   }
-  .navLoginTabs{
+
+  .navLoginTabs {
     position: absolute;
     right: -160px;
     top: 0px;
     display: flex;
     transition: all 0.75s;
   }
-  .active{
+
+  .active {
     right: 0px;
   }
 }
+
 .show {
   display: block;
   font-size: 0.9rem;
   font-weight: 500;
   margin-right: 1.5rem;
 }
+
 .hide {
   display: none;
 }
@@ -55,5 +63,17 @@
 @media screen and (max-width: 767px) {
   .Navbar_Wrapper {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .Navbar_Wrapper {
+    .navBar_logo {
+      width: 140px;
+    }
+  }
+
+  .show {
+    margin: 0%;
   }
 }
