--- a/pages/ProfileDetails/Components/RightSection/RightSection.module.scss
+++ b/pages/ProfileDetails/Components/RightSection/RightSection.module.scss
@@ -33,3 +33,23 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 990px) and (min-width: 768px) {
+
+    .rghtSec{
+
+        button{
+            padding: 0.7rem 1rem;
+        }
+    }
+}
