--- a/components/Cards/Card.module.scss
+++ b/components/Cards/Card.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/constants.scss";
+
 .card {
   position: relative;
   width: 75%;
@@ -6,30 +7,41 @@
   box-shadow: 0 0.625em 1.25em #0006;
   margin-right: -75px;
   border: none;
+
   @media screen and (max-width: 991px) {
     width: 100%;
     margin-right: 0;
   }
+
+ 
 }
-.redParent{
-    background-color: $dark_maroon_bg;
-    position: relative;
-    width: 75%;
-    padding: 1.25em;
-    box-shadow: 0 0.625em 1.25em #0006;
-    margin-right: -75px;
-    border: none;
-    color:$white_txt;
-    .redCard{
-        padding-bottom: 1.25rem;
-        background-color: $dark_maroon_bg;
-        color:$white_txt;
-      }
-    @media screen and (max-width: 991px) {
-      width: 114%;
-      margin-right: 0;
+@media only screen and (max-width: 300px) {
+  .cardBtuoonTab{
+    padding: 0%;
+    
+    button{
+      padding: 0.7rem 0.5rem;
     }
   }
-   
+}
+.redParent {
+  background-color: $dark_maroon_bg;
+  position: relative;
+  width: 75%;
+  padding: 1.25em;
+  box-shadow: 0 0.625em 1.25em #0006;
+  margin-right: -75px;
+  border: none;
+  color: $white_txt;
 
+  .redCard {
+    padding-bottom: 1.25rem;
+    background-color: $dark_maroon_bg;
+    color: $white_txt;
+  }
 
+  @media screen and (max-width: 991px) {
+    width: 114%;
+    margin-right: 0;
+  }
+}
