--- a/pages/HelpPage/HelpMain.module.scss
+++ b/pages/HelpPage/HelpMain.module.scss
@@ -19,78 +19,84 @@
         border-right: 1px solid #bdbaba !important;
       }
     }
-
-    .header_Help {
-      display: flex;
-      justify-content: center;
-      font-size: 22px;
-      margin-top: 3rem;
-      margin-bottom: 10px;
-
-      a {
-        color: #da3a3a;
+    
+    @media only screen and (max-width: 991px) and (min-width: 768px) {
+      div{
+        padding-bottom: 0.5rem;
       }
-    }
+  }
 
-    span {
-      display: block;
-      color: #615f5f;
-    }
+  .header_Help {
+    display: flex;
+    justify-content: center;
+    font-size: 22px;
+    margin-top: 3rem;
+    margin-bottom: 10px;
 
-    input {
-      width: 70%;
-      padding: 0.5rem;
-      margin-bottom: 50px;
-      border-radius: 0px;
-      border: 1px solid #aca5a5;
-      margin-top: 20px;
+    a {
+      color: #da3a3a;
+    }
+  }
+
+  span {
+    display: block;
+    color: #615f5f;
+  }
+
+  input {
+    width: 70%;
+    padding: 0.5rem;
+    margin-bottom: 50px;
+    border-radius: 0px;
+    border: 1px solid #aca5a5;
+    margin-top: 20px;
+  }
+
+  button {
+    background-color: #da3a3a;
+    width: 20%;
+    height: 39px;
+    border: none;
+    border-radius: 0px;
+    margin-top: 20px;
+
+    @media only screen and (max-width: 300px) {
+      width: auto;
+    }
+  }
+
+
+  .categories {
+    padding: 10px 10px 20px 10px;
+    color: #da3a3a;
+  }
+
+  .email_help {
+    color: #da3a3a;
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    margin-bottom: 1rem;
+  }
+
+  .callback_btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #aca5a5;
+
+    @media only screen and (max-width: 676px) {
+      padding-bottom: 3rem;
     }
 
     button {
-      background-color: #da3a3a;
-      width: 20%;
-      height: 39px;
-      border: none;
-      border-radius: 0px;
-      margin-top: 20px;
-
-      @media only screen and (max-width: 300px) {
-        width: auto;
-      }
-    }
-
-
-    .categories {
-      padding: 10px 10px 20px 10px;
-      color: #da3a3a;
-    }
-
-    .email_help {
-      color: #da3a3a;
-      display: flex;
-      justify-content: center;
-      font-size: 18px;
+      width: 150px;
+      color: hsl(0, 9%, 90%);
       margin-bottom: 1rem;
     }
-
-    .callback_btn {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      border-top: 1px solid #aca5a5;
-
-      @media only screen and (max-width: 676px) {
-        padding-bottom: 3rem;
-      }
-
-      button {
-        width: 150px;
-        color: hsl(0, 9%, 90%);
-        margin-bottom: 1rem;
-      }
-    }
   }
+}
 }
 
 // HelpMain scss
