--- a/pages/ProfileDetails/Components/About/About.module.scss
+++ b/pages/ProfileDetails/Components/About/About.module.scss
@@ -37,7 +37,16 @@
 
 
 
+@media only screen and (max-width: 990px) and (min-width: 768px) {
+    .content{
+        padding: 30px 0px;
 
+        .aboutCont{
+            margin: 0 2rem;
+        }
+    }
+
+}
 
 
 
