--- a/pages/ProfileDetails/Components/Family/family.module.scss
+++ b/pages/ProfileDetails/Components/Family/family.module.scss
@@ -61,6 +61,51 @@
 
 
 
+@media only screen and (max-width: 990px) and (min-width: 768px) {
+    .content {
+        padding: 30px 20px;
+
+        .familyCont {
+            .controlDiv {
+                padding: 2rem 0 0 0;
+                max-width: 80%;
+                margin: auto;
+                gap: 15px;
+                display: flex;
+                flex-direction: column;
+
+                svg {
+                    margin: 0 3rem;
+                    margin-bottom: 0.31rem;
+                }
+
+                p {
+                    padding-top: 0;
+                    text-align: center;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
+        }
+
+        .eduCont {
+            margin: 0rem;
+
+            ul {
+                margin: 0 1rem;
+
+                li {
+                    padding-right: 10px;
+                }
+            }
+        }
+    }
+
+}
+
+
+
 
 @media only screen and (max-width: 676px) {
     .content {
@@ -78,12 +123,12 @@
         .familyCont {
             .controlDiv {
                 padding: 2rem 0 0 0;
-    
+
                 svg {
                     margin: 0 3rem;
                     margin-bottom: 0.31rem;
                 }
-    
+
                 p {
                     padding-top: 0;
                     text-align: center;
