--- a/pages/Register/RegisterDetails.module.scss
+++ b/pages/Register/RegisterDetails.module.scss
@@ -12,7 +12,7 @@
     text-align: center;
     width: 75%;
     margin: auto;
-    a {
+    .topButtons{
         border-bottom: 2px solid #fff;
         font-size: 17px;
         display: block;
