--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -1,412 +1,307 @@
 @import "../../../styles/constants.scss";
 
 .profile_Container {
-    background: rgb(231, 230, 230);
-    padding-bottom: 10rem;
+  background: rgb(231, 230, 230);
+  padding-bottom: 10rem;
+  text-align: end;
+
+  h1 {
+    font-size: 1.375rem;
+    text-align: center;
+    padding: 1.875rem 0;
+  }
+
+  small {
     text-align: end;
+    display: block;
+    padding-bottom: 1rem;
+  }
 
-    h1 {
-        font-size: 1.375rem;
-        text-align: center;
-        padding: 1.875rem 0;
+  small::after {
+    content: " *";
+    color: #f00;
+    font-size: 18px;
+  }
+
+  .inputCover {
+    border: 1px solid #d9d9d9;
+
+    input {
+      border-radius: 2px;
+      padding: 14px 10px;
+      margin-bottom: 1em;
     }
-
-    small {
-        text-align: end;
-        display: block;
-        padding-bottom: 1rem;
-    }
-
-    small::after {
-        content: " *";
-        color: #F00;
-        font-size: 18px;
-    }
-
-    .inputCover {
-        border: 1px solid #d9d9d9;
-
-        input {
-            border-radius: 2px;
-            padding: 14px 10px;
-            margin-bottom: 1em;
-        }
-    }
+  }
 }
-
-.right_section {
-    padding-top: 8rem;
-
-    @media screen and (max-width: 768px) {
-        padding-top: 4rem;
-    }
-
-    h3 {
-        font-size: 1.0625rem;
-        font-weight: 700;
-        border-bottom: 1px solid #666;
-        padding-bottom: 1rem;
-        text-align: center;
-    }
-
-    i {
-        background-image: url("../../../public/Images/reg-spirite.png");
-        background-repeat: no-repeat;
-        display: block;
-        margin: auto;
-
-    }
-
-    span {
-        display: block;
-        width: 90%;
-        text-align: center;
-        margin: auto;
-    }
-
-    .icon1 {
-        background-position: 1px 1px;
-        width: 39px;
-        height: 44px;
-        margin: 1rem auto;
-    }
-
-    .icon2 {
-        background-position: 1px -48px;
-        width: 47px;
-        height: 44px;
-        margin: 1rem auto;
-    }
-
-    .icon3 {
-        background-position: 1px -94px;
-        width: 47px;
-        height: 44px;
-        margin: 1rem auto;
-    }
-
-    .icon4 {
-        background-position: 1px -140px;
-        width: 47px;
-        height: 44px;
-        margin: 1rem auto;
-    }
-}
-
 @media only screen and (max-width: 950px) {
-
-    .register_header_Links,
-    .register_header_Links a {
-        width: 100%;
-    }
+  .register_header_Links,
+  .register_header_Links a {
+    width: 100%;
+  }
 }
-
 
 /////////////////////////////////////////inputboxes SCSS////////////////////////////////////////////////////////////////////////////////
 
 .formEdit {
-    text-align: start;
-    .singleBox {
+  text-align: start;
+  .singleBox {
+    display: flex;
+    justify-content: end;
+    div {
+      width: 70%;
+      text-align: center;
+      svg {
+        position: absolute;
+        right: 15px;
+        top: 40%;
+      }
+    }
 
-        display: flex;
-        justify-content: end;
-        div {
-            width: 70%;
-            text-align: center;
-            svg {
-                position: absolute;
-                right: 15px;
-                top: 40%;
+    .inputBox {
+      border: 1px solid #d9d9d9;
+      border-radius: 2px;
+      padding: 0.875rem 5.5rem;
+      text-align: center;
+      margin: 0.6em;
+      margin-right: 0%;
+      color: $browser_text;
+      cursor: pointer;
+      position: relative;
+      min-width: 275px;
+      background-color: $milkWhite_bg;
+
+      .inputBoxVal {
+        visibility: hidden;
+        border: 1px solid #d9d9d9;
+        border-radius: 2px;
+        padding: 0.875rem 1rem;
+        text-align: center;
+        margin: 0.6em;
+        color: $browser_text;
+        cursor: pointer;
+        width: 100%;
+        position: absolute;
+        left: -9px;
+        border: 1px solid $red_bg;
+        background: $milkWhite_bg;
+        box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
+        z-index: 9;
+
+        ul {
+          list-style: none;
+          margin: 0;
+          padding: 0 5px;
+          width: 100%;
+          max-height: 300px;
+          overflow-x: hidden;
+          overflow-y: scroll;
+          cursor: text;
+          display: grid;
+          grid-template-columns: auto auto auto;
+
+          li {
+            position: relative;
+            margin: 3px 5px 3px 0;
+            padding: 10px 20px 10px 5px;
+            border: 1px solid #d9d9d9;
+            max-width: 100%;
+            border-radius: 3px;
+            background-color: #f5f5f5;
+            line-height: 13px;
+            cursor: default;
+
+            &:hover {
+              background-color: #d9475c;
+              color: #fff;
             }
+          }
+
+          .tabActive {
+            background-color: #d9475c;
+            color: #fff;
+          }
+        }
+      }
+    }
+
+    .blankInput {
+      border: none !important;
+      background: transparent !important;
+      list-style: none;
+      input {
+        padding: 0;
+        outline: 0;
+        border: 0 !important;
+        background: transparent !important;
+        box-shadow: none;
+        color: #999;
+        font-size: 100%;
+        font-family: sans-serif;
+        line-height: normal;
+        border-radius: 0;
+      }
+    }
+  }
+
+  .input_max {
+    width: -webkit-fill-available;
+  }
+
+  label {
+    margin: 1rem 0 0 -9rem;
+    text-align: start;
+  }
+
+  input {
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    padding: 0.875rem 2.5rem;
+    text-align: center;
+    margin: 0.6em;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.active {
+  visibility: visible !important;
+}
+
+@media only screen and (max-width: 990px) and (min-width: 768px) {
+  .profile_Container {
+    padding: 0 2rem;
+    padding-bottom: 5rem;
+    text-align: center;
+
+    .formEdit {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+
+      .singleBox {
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+
+        label {
+          position: initial;
+          margin: 0%;
+          text-align: start;
         }
 
         .inputBox {
-            border: 1px solid #d9d9d9;
-            border-radius: 2px;
-            padding: 0.875rem 5.5rem;
-            text-align: center;
-            margin: 0.6em;
-            margin-right: 0%;
-            color: $browser_text;
-            cursor: pointer;
-            position: relative;
-            min-width: 275px;
-            background-color: $milkWhite_bg;
-
-            .inputBoxVal {
-                visibility: hidden;
-                border: 1px solid #d9d9d9;
-                border-radius: 2px;
-                padding: 0.875rem 1rem;
-                text-align: center;
-                margin: 0.6em;
-                color: $browser_text;
-                cursor: pointer;
-                width: 100%;
-                position: absolute;
-                left: -9px;
-                border: 1px solid $red_bg;
-                background: $milkWhite_bg;
-                box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
-                z-index: 9;
-
-                ul {
-                    list-style: none;
-                    margin: 0;
-                    padding: 0 5px;
-                    width: 100%;
-                    max-height: 300px;
-                    overflow-x: hidden;
-                    overflow-y: scroll;
-                    cursor: text;
-                    display: grid;
-                    grid-template-columns: auto auto auto;
-
-                    li {
-                        position: relative;
-                        margin: 3px 5px 3px 0;
-                        padding: 10px 20px 10px 5px;
-                        border: 1px solid #d9d9d9;
-                        max-width: 100%;
-                        border-radius: 3px;
-                        background-color: #f5f5f5;
-                        line-height: 13px;
-                        cursor: default;
-
-                        &:hover {
-                            background-color: #d9475c;
-                            color: #fff
-                        }
-                    }
-
-                    .tabActive {
-                        background-color: #d9475c;
-                        color: #fff
-                    }
-                }
-            }
+          margin: 0%;
+          padding: 0%;
+          text-align: start;
+          width: -webkit-fill-available;
+          input {
+            text-align: start;
+          }
         }
-
-        .blankInput {
-            border: none !important;
-            background: transparent !important;
-            list-style: none;
-
-            input {
-                // margin: 1px 0;
-                padding: 0;
-                outline: 0;
-                border: 0 !important;
-                background: transparent !important;
-                box-shadow: none;
-                color: #999;
-                font-size: 100%;
-                font-family: sans-serif;
-                line-height: normal;
-                border-radius: 0;
-            }
-        }
+      }
     }
-
-    .input_max {
-        width: -webkit-fill-available;
-    }
-
-    label {
-        margin: 1rem 0 0 -9rem;
-        text-align: start;
-    }
-
-    input {
-        border: 1px solid #d9d9d9;
-        border-radius: 2px;
-        padding: 0.875rem 2.5rem;
-        text-align: center;
-        margin: 0.6em;
-
-        &:focus {
-            outline: none;
-        }
-    }
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-.active {
-    visibility: visible !important;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media only screen and (max-width: 990px) and (min-width: 768px) {
-
-    .profile_Container {
-        padding: 0 2rem;
-        padding-bottom: 5rem;
-        text-align: center;
-
-
-        .formEdit {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-
-            .singleBox {
-                display: flex;
-                flex-direction: column;
-                gap: 0.3rem;
-
-                label {
-                    position: initial;
-                    margin: 0%;
-                    text-align: start;
-                }
-
-                .inputBox {
-                    margin: 0%;
-                    padding: 0%;
-                    text-align: start;
-                    width: -webkit-fill-available;
-                    input {
-                        text-align: start;
-                    }
-                }
-            }
-        }
-    }
-}
-
 
 @media only screen and (max-width: 540px) and (min-width: 423px) {
-    .profile_Container {
-        padding: 0 2rem;
-        padding-bottom: 5rem;
-        text-align: center;
+  .profile_Container {
+    padding: 0 2rem;
+    padding-bottom: 5rem;
+    text-align: center;
 
+    .formEdit {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
 
-        .formEdit {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
+      .singleBox {
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
 
-            .singleBox {
-                display: flex;
-                flex-direction: column;
-                gap: 0.3rem;
-
-                label {
-                    position: initial;
-                    margin: 0%;
-                    text-align: start;
-                }
-
-                .inputBox {
-                    margin: 0%;
-                    padding: 0%;
-                    text-align: start;
-                    width: -webkit-fill-available;
-
-                    input {
-                        text-align: start;
-                    }
-                }
-            }
+        label {
+          position: initial;
+          margin: 0%;
+          text-align: start;
         }
+
+        .inputBox {
+          margin: 0%;
+          padding: 0%;
+          text-align: start;
+          width: -webkit-fill-available;
+
+          input {
+            text-align: start;
+          }
+        }
+      }
     }
+  }
 }
-
-
-
-
-
-
 
 @media only screen and (max-width: 415px) {
-    .register_header_Links {
-        padding: 38px 0;
-        width: 100%;
-    }
+  .register_header_Links {
+    padding: 38px 0;
+    width: 100%;
+  }
 
-    .profile_Container {
-        padding: 0 2rem;
-        padding-bottom: 5rem;
-        text-align: center;
+  .profile_Container {
+    padding: 0 2rem;
+    padding-bottom: 5rem;
+    text-align: center;
 
-        .formEdit {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+    .formEdit {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
 
+      .singleBox {
+        display: flex;
+        flex-direction: column;
 
-            .singleBox {
-                display: flex;
-                flex-direction: column;
-
-                label {
-                    position: initial;
-                    margin: 0%;
-                    text-align: start;
-                }
-
-                .inputBox {
-                    margin: 0.6rem 0;
-                    padding: 0%;
-                    width: -webkit-fill-available;
-
-                    .blankInput {
-                        text-align: start;
-
-                        input {
-                            text-align: start;
-                        }
-                    }
-                }
-            }
+        label {
+          position: initial;
+          margin: 0%;
+          text-align: start;
         }
+
+        .inputBox {
+          margin: 0.6rem 0;
+          padding: 0%;
+          width: -webkit-fill-available;
+
+          .blankInput {
+            text-align: start;
+
+            input {
+              text-align: start;
+            }
+          }
+        }
+      }
     }
+  }
 }
 
-
-
 @media only screen and (max-width: 300px) {
-    .profile_Container {
-        text-align: center;
+  .profile_Container {
+    text-align: center;
 
-        div {
-            padding: 0;
+    div {
+      padding: 0;
 
-            .formEdit {
-
-                .singleBox {
-
-                    .inputBox {
-                        margin: 0.6rem 0;
-                        padding: 0%;
-                        min-width: 0;
-                    }
-                }
-            }
+      .formEdit {
+        .singleBox {
+          .inputBox {
+            margin: 0.6rem 0;
+            padding: 0%;
+            min-width: 0;
+          }
         }
+      }
     }
+  }
 }
